// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderType: TEXT > Modifying operators of the same type do not modify values 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "not_equal",
          "property": "text",
          "value": "hello!",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TEXT > Modifying the operatorStyle from none to tags 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "one_of",
          "property": "text",
          "value": [
            "1",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TEXT > operator: "style=none" 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "empty",
          "property": "text",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TEXT > operator: "style=noop" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "equal",
          "property": "text",
          "value": "1",
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: TEXT > operator: "style=one_of" && value is not empty 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "operator": "one_of",
          "property": "text",
          "value": [
            "1",
          ],
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;
